Fixed overflow issue

--- a/css/electrophysiology_browser.css
+++ b/css/electrophysiology_browser.css
@@ -42,6 +42,10 @@ svg {
   user-select: none;
 }
 
+svg:not(:root) {
+  overflow: clip;
+}
+
 /* ##################### EEGNET OVERRIDE START ################## */
 .list-group-item {
   position: relative;
